<resources>
    <string name="app_name">LolosASN</string>
    <string name="login_text">Login</string>
    <string name="exam_text">Examination</string>
    <string name="leaderboard">Papan Peringkat</string>
    <string name="password_length_warning">Password minimal 8 karakter</string>
    <string name="password_format_warning">Password harus huruf dan angka</string>
    <string name="password_confirm_error">Password tidak sama</string>
    <string name="valid_email">Format email salah</string>
    <string name="app_logo">Logo Aplikasi</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="forgot_password">Lupa kata sandi?</string>
    <string name="login_btn">Login</string>
    <string name="ask_to_register">Belum punya akun? <b>Klik disini</b></string>
    <string name="account_register">Daftar Akun</string>
    <string name="name">Nama Anda</string>
    <string name="confirm_password">Ulangi Kata Sandi</string>
    <string name="register_text">Daftar</string>
    <string name="register_btn">Tombol Daftar</string>
    <string name="ask_to_login">Sudah punya akun? <b>Klik disini</b></string>
    <string name="tryout_picture">Foto Tryout</string>
    <string name="tryout_casn">Tryout CASN</string>
    <string name="lorem_description">ply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s</string>
    <string name="books">Tumpukan buku</string>
    <string name="good_material">Materi Belajar Yang Menarik</string>
    <string name="artificial">Kecerdasan Buatan</string>
    <string name="ai_analysis">Analisis AI Hasil Tryout</string>
    <string name="marker_point">Target</string>
    <string name="lolos_casn">Membantu Lolos CASN</string>
    <string name="skip_text">Lewati</string>
    <string name="next_text">Selanjutnya</string>
    <string name="done_text">Selesai</string>
    <string name="trophy_picture">Foto tropi</string>
    <string name="rank_text">Rank</string>
    <string name="name_text">Nama</string>
    <string name="nilai_text">Nilai</string>
    <string name="skor_text">100</string>
    <string name="icon">icon</string>
    <string name="divider">divider</string>
    <string name="username">Melitha</string>
    <string name="learning_material">Materi Belajar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifikasi</string>
    <string name="title_tryout">Tryout</string>
    <string name="title_materi">Materi</string>
    <string name="title_profil">Profil</string>
    <string name="hello_home">Hello Home Fragment</string>
    <string name="hello_learning_fragment">Learning Fragment</string>
    <string name="hello_profile_fragment">profile</string>
    <string name="hello_tryout_fragment">Tryout Fragment</string>
    <string name="greeting_text">Hai Melitha</string>
    <string name="greeting_date">Selamat Pagi</string>
    <string name="notification_bell">notification bell</string>
    <string name="member_status">Premium Member</string>
    <string name="tryout_text">Tombol Tryout</string>
    <string name="result">Hasil Tryout</string>
    <string name="article">Artikel</string>
    <string name="ads">iklan</string>
    <string name="newest_tryout">Tryout Terbaru</string>
    <string name="check_all">Lihat Semua</string>
    <string name="article_image">Gambar Artikel</string>
    <string name="article_title">CPNS 2024 Dibuka Bulan Juni?</string>
    <string name="date">5 Mei 2024</string>
    <string name="cpns">CPNS</string>
    <string name="title_tryout_cpns">Tryout 1 CPNS 2024</string>
    <string name="calendar_icon">calendar icon</string>
    <string name="date_range">23 Mei - 7 Juni 2024</string>
    <string name="detail">Lihat Detail</string>
    <string name="tab_twk">TWK</string>
    <string name="tab_tiu">TIU</string>
    <string name="tab_tkp">TKP</string>
    <string name="twk">Tes Wawasan Kebangsaan</string>
    <string name="cover">sampul foto</string>
    <string name="ebook">Ebook CPNS</string>
    <string name="list_material">1. Nasionalisme</string>
    <string name="dot">Titik</string>
    <string name="button_materi">button materi</string>
    <string name="tkp">Tes Karakteristik Pribadi</string>
    <string name="tiu">Tes Intelegensi Umum</string>
    <string name="lorem_long">Lorem ipsum dolor sit amet consectetur. Amet tellus erat adipiscing magna sit feugiat venenatis. Integer dui sit posuere risus. Senectus venenatis gravida sed iaculis. Amet leo sed ac adipiscing in orci sagittis. At nunc eget fusce egestas nibh massa placerat. Ut libero nunc risus tellus ut neque augue.\nEuismod massa turpis dictum semper lorem ut accumsan. Eu ut adipiscing lectus sed et eu suscipit maecenas et. Amet ullamcorper purus dictumst phasellus ullamcorper suspendisse dolor. Venenatis suscipit posuere leo purus augue. Diam mauris arcu amet sit. Vel erat arcu ut sed purus amet aenean. Turpis duis tristique nulla etiam aliquet pellentesque arcu lectus. Pharetra ultricies tincidunt id semper amet mattis. Mauris egestas lacus turpis neque. Sit quis faucibus pulvinar morbi in viverra.\nPellentesque porttitor mauris pellentesque turpis magna sapien arcu. Proin vitae hendrerit quisque sed. Eget urna nec vitae mauris posuere sapien ullamcorper tortor eu. Nunc a enim imperdiet tincidunt luctus feugiat. Risus ultrices amet enim tincidunt. Mauris mi non commodo nibh enim. Magna egestas turpis quis blandit nisl ornare neque. Sit elementum sit sed condimentum sed suspendisse. A nec eget sed dapibus cras ut sit dui. Suspendisse diam maecenas vivamus lacus risus auctor lectus. Vitae lacus et suspendisse vitae maecenas tempus velit morbi.</string>
    <string name="tryout_packet">PAKET TRYOUT CPNS</string>
    <string name="premium">Premium</string>
    <string name="free">Gratis</string>
    <string name="packet_description">Silahkan pilih paket tryout sesuai dengan yang kamu butuhkan</string>
    <string name="one_packet">1 Paket Tryout</string>
    <string name="three_packet">3 Paket Tryout</string>
    <string name="tryout_premium">Tryout Premium</string>
    <string name="periode_tryout">Periode Tryout</string>
    <string name="title">DAFTAR TRYOUT CPNS</string>
    <string name="start">Mulai</string>
    <string name="gambar_kertas">gambar kertas</string>
    <string name="tryout_one">Tryout 1 CPNS 2024</string>
    <string name="cancel">Gak Dulu</string>
    <string name="detail_tryout">Detail Tryout</string>
    <string name="soal">30 Soal</string>
    <string name="time">30 Menit</string>
    <string name="passing_grade">Passing Grade = %1$d poin</string>
    <string name="info">Informasi Penting</string>
    <string name="information_description">Sistem penilaian seleksi kompetensi dasar (SKD) oleh Badan Kepegawaian Negara (BKN):\nBenar = (+5 poin)\nSalah = (0 poin)\nKosong = (0 poin)</string>
    <string name="are_you_sure">Apakah Kamu Sudah Yakin?</string>
    <string name="end_the_test">Kamu telah menyelesaikan %1$d/%2$d soal. Apakah yakin ingin mengakhiri subtest ini?</string>
    <string name="nope">Batal</string>
    <string name="check_everything">Cek Semua</string>
    <string name="soal_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum \n\nTeks diatas membahas tentang ...</string>
    <string name="lorem_small">Lorem ipsum dolor sit amet</string>
    <string name="cek_jawaban_soal">Cek Jawaban Soal</string>
    <string name="passed">SELAMAT ANDA LULUS!</string>
    <string name="passed_or_no">icon lulus atau tidak</string>
    <string name="total_point">"%d Poin"</string>
    <string name="result_title">Hasil Tryout</string>
    <string name="point">120</string>
    <string name="keterangan">Keterangan</string>
    <string name="not_passed_rectangle">Persegi tidak lulus</string>
    <string name="passed_text">Lolos Passing Grade</string>
    <string name="not_passed_text">Tidak Lolos Passing Grade</string>
    <string name="analysis_ai">Analisis AI</string>
    <string name="description_ai">Identifikasi kelemahan dan kekuatan pemahaman anda terkait dengan materi ujian tryout</string>
    <string name="pembahasan">Pembahasan</string>
    <string name="description_pembahasan">Pelajari keselahan anda saya menjawab soal ujian tryout serta lihat penyelesaian \nsoal</string>
    <string name="ranking_text">Perangkingan</string>
    <string name="description_rank">Lihat peringkat nilai anda dibandingkan dengan peserta lainnya dari\nseluruh Indonesia</string>
    <string name="premium_member">Premium Member</string>
    <string name="email_example">melitha@gmail.com</string>
    <string name="other_info">Informasi Lainnya</string>
    <string name="privacy_term">Kebijakan privasi</string>
    <string name="term_and_condition">Syarat dan ketentuan layanan</string>
    <string name="account_setting">Pengaturan akun</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="logout_text">Keluar</string>
    <string name="title_term_and_condition">Syarat dan Ketentuan Layanan</string>
    <string name="title_privacy_term">Kebijakan Privasi</string>
    <string name="are_you_sure_logout">Anda Yakin Ingin Keluar?</string>
    <string name="saving_activity_desc">Apakah Anda yakin ingin keluar? Progres Anda akan disimpan.</string>
    <string name="no">Tidak</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="no_connection">Tidak Ada Internet</string>
    <string name="no_connection_description">Silakan periksa koneksi Anda atau coba lagi</string>
    <string name="try_again">Coba Lagi</string>
    <string name="tryout_start_warning">Kamu akan mengerjakan Tryout ini. Sebelum memulai pastikan jaringan dan tempat sudah kondusif. Selamat mengerjakan</string>
    <string name="total_soal">%1d Soal</string>
    <string name="total_time">%1d Menit</string>
    <string name="drilling_soal">Drilling Soal</string>
    <string name="start_the_drill_warning">Sebelum memulai pastikan jaringan dan tempat sudah kondusif. Selamat mengerjakan.</string>
    <string name="oke">Oke</string>
    <string name="finish_the_drill_warning">Kamu akan menyelesaikan Drilling \nSoal ini</string>
    <string name="important_information">Informasi Penting</string>
    <string name="info_desc_tryout">Tryout sudah menggunakan sistem penilaian seleksi kompetensi dasar (SKD) Oleh Badan Kepegawaian Negara (BKN)</string>
</resources>