<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.dialog.ValidationDrillingStartFragment">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/gambar_kertas"
        android:src="@drawable/ic_woman"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textColor="@color/primaryColor"
        android:textSize="25sp"
        android:gravity="center"
        app:minTextSize="12sp"
        android:fontFamily="@font/roboto_bold"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/finish_the_drill_warning" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done_text"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nope"
        android:textStyle="bold"
        style="@style/CustomOutlinedButton"/>

</LinearLayout>