<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.activity.NoConnectionActivity">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_no_connection" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_connection"
        android:fontFamily="@font/roboto_bold" />

    <TextView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/no_connection_description"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/try_again"
        android:textColor="@color/primaryColor"
        android:fontFamily="@font/roboto_bold"
        android:background="@drawable/button_stroke"/>

</LinearLayout>