<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.TryoutFragment"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:elevation="4dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="?attr/colorPrimary"
            app:title="@string/tryout_premium"
            app:titleTextAppearance="@style/CustomToolbarTitleTextAppearance"
            android:background="@color/white"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/divider"
            android:src="@drawable/underline"
            app:tint="@color/grey" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/premium"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:background="@drawable/orange_border"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintStart_toStartOf="parent" />
    
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="33sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintTop_toBottomOf="@id/tv_type"
        app:layout_constraintStart_toStartOf="@id/tv_type" />

    <TextView
        android:id="@+id/tv_periode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/periode_tryout"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title" />

    <ImageView
        android:id="@+id/iv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/calendar_icon"
        android:src="@drawable/baseline_calendar_today_24"
        app:layout_constraintTop_toBottomOf="@id/tv_periode"
        app:layout_constraintStart_toStartOf="@id/tv_periode"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tv_date_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/date_range"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/iv_date"
        app:layout_constraintTop_toTopOf="@id/iv_date"
        app:layout_constraintBottom_toBottomOf="@id/iv_date" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tryout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_date_range"
        tools:listitem="@layout/list_tryout"/>

</androidx.constraintlayout.widget.ConstraintLayout>