<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="4dp"
    android:backgroundTint="@color/white"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="164dp">

        <TextView
            android:id="@+id/tv_cpns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:text="@string/cpns"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/primaryColor"/>

        <TextView
            android:id="@+id/tv_title_tryout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_tryout_cpns"
            android:textSize="25sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_cpns" />
        
        <ImageView
            android:id="@+id/iv_ic_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/calendar_icon"
            android:src="@drawable/baseline_calendar_today_24"
            card_view:tint="@color/black"
            card_view:layout_constraintStart_toStartOf="@id/tv_title_tryout"
            card_view:layout_constraintTop_toBottomOf="@id/tv_title_tryout" />

        <TextView
            android:id="@+id/tv_date_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/date_range"
            card_view:layout_constraintStart_toEndOf="@id/iv_ic_calendar"
            card_view:layout_constraintTop_toTopOf="@id/iv_ic_calendar"
            card_view:layout_constraintBottom_toBottomOf="@id/iv_ic_calendar" />

        <ImageView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/divider"
            android:src="@drawable/underline"
            card_view:layout_constraintTop_toBottomOf="@id/iv_ic_calendar"
            card_view:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textColor="@color/primaryColor"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/divider"
            card_view:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>